kubernetes/addons/opentelemetry/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry
  labels:
    app.kubernetes.io/name: opentelemetry
